# azure-reports

./: README.md  pyproject.toml  test-requirements.txt  tox.ini
.github/workflows/: tox.yaml
azure_tools/: list_groups.py  list_resources.py
